# gifsicle-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs  main.rs
