[package]
name = "gifsicle"
description = "Bindings for gifsicle library. Supports lossy compression. GPL."
version = "1.92.5"
authors = ["Eddie Kohler <ekohler@gmail.com>", "Kornel <kornel@geekhood.net>", "Hans Dinsen-Hansen <dino@danbbs.dk>"]
edition = "2018"
links = "gifsicle"
license-file = "vendor/COPYING"
readme = "README.md"
include = ["/src/*.rs", "/build.rs", "/vendor/COPYING", "/README.md", "/Cargo.toml", "/vendor/src/*.[ch]", "/vendor/include/*/*.h"]
homepage = "https://www.lcdf.org/gifsicle/"
repository = "https://gitlab.com/kornelski/gifsicle-rust.git"
categories = ["multimedia::encoding", "external-ffi-bindings"]
keywords = ["gif", "lossy", "encoder", "ffi"]

[build-dependencies]
cc = "1.0.45"

[dependencies]
libc = "0.2.62"

[package.metadata.docs.rs]
#  x86_64-pc-windows-gnu
targets = ["x86_64-unknown-linux-gnu"]
